force-app/src/objects/AccreditationPartnerRegistration__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accreditation Partner Registrations</relationshipLabel>
        <relationshipName>AccreditationPartnerRegistrations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccreditationCycleStage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accreditation Cycle Stage</label>
        <referenceTo>AccreditationCycleStage__c</referenceTo>
        <relationshipLabel>Accreditation Partner Registrations</relationshipLabel>
        <relationshipName>AccreditationPartnerRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccreditationCycle__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Accreditation Cycle</label>
        <referenceTo>AccreditationCycle__c</referenceTo>
        <relationshipLabel>Accreditation Partner Registrations</relationshipLabel>
        <relationshipName>AccreditationPartnerRegistrations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccreditationPartnerLink__c</fullName>
        <formula>HYPERLINK(
&quot;/&quot; &amp; Account__c,
Account__r.Name &amp; &quot; (&quot; &amp; Name &amp; &quot;)&quot;,
&quot;_self&quot;
)</formula>
        <label>Accreditation Partner Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccreditationStageName__c</fullName>
        <formula>AccreditationCycleStage__r.AccreditationStage__r.Name</formula>
        <label>Accreditation Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digest__c</fullName>
        <externalId>true</externalId>
        <label>Digest</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <inlineHelpText>When the school or partner agency have indicated to no longer proceed with a joint/synchronised accreditation process.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>The start date in which a joint/synchronised accreditation process has been agreed.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Accreditation Partner Registration</label>
    <nameField>
        <displayFormat>APR-{0000}</displayFormat>
        <label>Accreditation Partner Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accreditation Partner Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>